--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "bulma": "^0.9.4",
+    "@fortawesome/fontawesome-free": "^6.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
